Cierre de líneas
Faltaba el cierre (";") de tres líneas de código de las hojas de estilo.

--- a/frontweb/style/general.css
+++ b/frontweb/style/general.css
@@ -2167,7 +2167,7 @@ body {
 
 .chat_conectados {
 	width: 160px;
-	height: 100px
+	height: 100px;
 	font-size: 11px;
 	border-bottom: 1px solid #fff;
 }
