--- a/frontweb/style/formulario.css
+++ b/frontweb/style/formulario.css
@@ -95,7 +95,7 @@ textarea {
 
 
 #tabla_contacto {
-	font-family:Arial, Helvetica, sans-serif
+	font-family:Arial, Helvetica, sans-serif;
 	font-size: 20px;
 	color: #758737;
 	margin: 5px;
