--- a/frontweb/style/intro.css
+++ b/frontweb/style/intro.css
@@ -361,7 +361,7 @@ input[type="submit"] {
 
 
 #tabla_contacto {
-	font-family:Arial, Helvetica, sans-serif
+	font-family:Arial, Helvetica, sans-serif;
 	font-size: 20px;
 	color: #758737;
 	margin: 5px;
