Inicio de reestructuración
Cambios estéticos y acomodo de funciones generales

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,9 @@
 
 .divGrupo{
     float:left;
-    width:46%;
-    padding-right: 10px;
+    width:43%;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 .grupo{
