Correcciones perfil de alumno y linkeo de series plantilla

--- a/frontweb/style/general.css
+++ b/frontweb/style/general.css
@@ -107,7 +107,7 @@ body {
 	border-radius: 10px; /* CSS3 (Opera 10.5, IE 9 y est&aacute;ndar a ser soportado por todos los futuros navegadores) */
 	width: 225px;
 	height: 35px;
-	border: 8px solid #ff9000;
+	border: 8px solid #acaab8;
 	background-color: #fff;	
 	font-family: Dosis, Arial, serif;
 	font-weight: 400;
